# oi.client.rgbd.kinectsdk2

./: CMakeLists.txt  README.md
headers/: AVEncodeTest.hpp  KinectSDK2Streamer.hpp
include/: KinectSDK2DeviceInterface.hpp
src/: AVEncodeTest.cpp  KinectSDK2DeviceInterface.cpp  KinectSDK2Streamer.cpp  OIClientKinectSDK2.cpp  main.cpp
tools/: extract_jpeg.py
